# margadarshak

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_router/: __init__.py  router.py
src/agent_router.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent_router.py
