[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-router"
version = "1.0.0"
description = "Production request routing for multi-agent systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

authors = [
    { name = "Darshankumar Joshi", email = "darshjme@gmail.com" }
]

keywords = ["agents", "routing", "llm", "multi-agent", "dispatcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-router"
Repository = "https://github.com/darshjme-codes/agent-router"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
